@@ -9,6 +9,7 @@ import org.springframework.stereotype.Component;
 
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Log4j2
 @Component
@@ -32,7 +33,7 @@ public class DemoPersistenceAdapter implements DemoPersistencePort {
             movementEntity.setType(movement.getType());
             movementEntity.setLastUpdated(OffsetDateTime.now());
             return movementEntity;
-        }).toList();
+        }).collect(Collectors.toList());
         movementEntityRepository.saveAllAndFlush(movementEntityList);
     }
 
@@ -46,6 +47,6 @@ public class DemoPersistenceAdapter implements DemoPersistencePort {
                         .dateCreated(movementEntity.getDateCreated())
                         .description(movementEntity.getDescription())
                         .type(movementEntity.getType())
-                        .build()).toList();
+                        .build()).collect(Collectors.toList());
     }
 }
